# simple_pubsub

./: package.xml  setup.py
install/: local_setup.sh  setup.sh
install/pubsub/lib/pubsub/: publisher  subscriber
install/pubsub/share/pubsub/: package.sh
install/velocity_control/share/velocity_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
pubsub/: publisher.py  subscriber.py
velocity_control/: package.xml  setup.py
velocity_control/velocity_control/: publisher_node.py  subscriber_node.py
