<package format="3">
  <!-- NOME DO PACOTE -->
  <name>  </name>
  <version>0.0.0</version>
  <!-- DESCRICAO DO PACOTE -->
  <description>  </description>
  <!-- MAINTAINER -->
  <maintainer email="  ">  </maintainer>
  <license>MIT</license>

  <!-- DEPENDENCIA DE BUILD -->
  <buildtool_depend>  </buildtool_depend>


  <!-- DEPENDENCIAS DE EXECUCAO -->
  <exec_depend>  </exec_depend>
  <exec_depend>  </exec_depend>

  <!-- DEPENDENCIAS DE TESTE -->
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <!-- TIPO DO BUILD -->
    <build_type>  </build_type>
  </export>
</package>
