<?xml version="1.0"?>
<package format="3">
  <name>velocity_control</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 publisher/subscriber package</description>
  <maintainer email="yago@example.com">Yago Ximenes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
